--- a/index.html
+++ b/index.html
@@ -1,1 +1,136 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>荷兰</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      flex-direction: column;
+    }
+    .button-container {
+      text-align: center;
+      display: flex;
+      justify-content: space-around;  /* 确保按钮水平排列 */
+      gap: 30px;  /* 设置按钮之间的间距 */
+      margin-bottom: 30px;  /* 让按钮组和下方按钮之间有间距 */
+    }
+    .button-container div {
+      text-align: center;
+    }
+    button {
+      background-color: #0073e6;
+      color: white;
+      border: none;
+      padding: 15px 30px;
+      font-size: 1.2em;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+    }
+    button:hover {
+      background-color: #005bb5;
+    }
+    /* 右下角返回按钮 */
+    .back-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      padding: 10px 20px;
+      font-size: 1em;
+      background-color: #ff5722;
+      border-radius: 5px;
+    }
+    .back-button:hover {
+      background-color: #e64a19;
+    }
+  .1 {
+}
+  </style>
+</head>
+<body>
+  <div class="button-container">
+    <!-- 第一组按钮：项目主页和申请要求 -->
+    <div>
+	  <p>荷兰</p>
+      <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/Delft'">代尔夫特理工大学 QS49</button>
+    </div>
+  </div>
 
+  <!-- 第二组按钮：没有文字 -->
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/Amsterdam'">阿姆斯特丹大学 QS55</button>
+    </div>
+  </div>
+
+  <div class="button-container">
+    <!-- 第一组按钮：项目主页和申请要求 -->
+    <div>
+	  <p>比利时</p>
+      <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/Leuven'">荷语鲁汶大学 QS63</button>
+    </div>
+  </div>
+  
+    <!-- 第一组按钮：项目主页和申请要求 -->
+  <div class="button-container">
+    <div>
+	  <p>丹麦</p>
+      <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/Aarhus'">奥胡斯大学 ARWU 2024 73</button>
+    </div>
+  </div>
+  
+    <!-- 第一组按钮：项目主页和申请要求 -->
+  <div class="button-container">
+    <div>
+	  <p>瑞典</p>
+      <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/KTH'">皇家理工学院 QS74</button>
+    </div>
+  </div>	
+
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/Uppsala'">乌普拉萨大学 ARWU 82</button>
+    </div>
+  </div>
+	
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/Londe'">隆德大学 QS75</button>
+    </div>
+  </div>	
+  
+    <!-- 第一组按钮：项目主页和申请要求 -->
+  <div class="button-container">
+    <div>
+	  <p>德国</p>
+      <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/TUM'">慕尼黑工业大学 QS28</button>
+    </div>
+  </div>	
+
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/FreeBerlin'">柏林自由大学 QS97</button>
+    </div>
+  </div>
+
+  <div class="button-container">
+    <div>
+	  <p>法国</p>
+      <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/'">法国</button>
+    </div>
+  </div>	
+	
+  <!-- 右下角返回按钮 -->
+  <button class="back-button" onclick="window.history.back()">回到上一页</button>
+
+</body>
+</html>
