--- a/KTH.html
+++ b/KTH.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>奥胡斯大学</title>
+  <title>皇家理工学院</title>
   <style>
     body {
       font-family: Arial, sans-serif;
