--- a/Londe.html
+++ b/Londe.html
@@ -1,1 +1,171 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>隆德大学</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      flex-direction: column;
+    }
+    .button-container {
+      text-align: center;
+      display: flex;
+      justify-content: space-around;  /* 确保按钮水平排列 */
+      gap: 30px;  /* 设置按钮之间的间距 */
+      margin-bottom: 30px;  /* 让按钮组和下方按钮之间有间距 */
+    }
+    .button-container div {
+      text-align: center;
+    }
+    button {
+      background-color: #0073e6;
+      color: white;
+      border: none;
+      padding: 15px 30px;
+      font-size: 1.2em;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+    }
+    button:hover {
+      background-color: #005bb5;
+    }
+    /* 右下角返回按钮 */
+    .back-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      padding: 10px 20px;
+      font-size: 1em;
+      background-color: #ff5722;
+      border-radius: 5px;
+    }
+    .back-button:hover {
+      background-color: #e64a19;
+    }
+  </style>
+</head>
+<body>
+  <div class="button-container">
+    <!-- 第一组按钮：项目主页和申请要求 -->
+    <div>
+      <p>项目主页</p>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-EGESO'">Economy and Society - Bachelor's Programme</button>
+    </div>
+    <div>
+      <p>申请要求</p>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-EGESO'">→</button>
+    </div>
+  </div>
 
+  <!-- 第二组按钮：没有文字 -->
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-ENFY'">Sciences, Physics</button>
+    </div>
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-ENFY'">→</button>
+    </div>
+  </div>
+  <!-- 第三组按钮：没有文字 -->
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-EGIBU'">International Business - Bachelor's Programme</button>
+    </div> 
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-EGIBU'">→</button>
+    </div>
+  </div>
+  
+	
+  <!-- 第四组按钮：没有文字 -->
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGFKO'">Fine Arts - Bachelor's Programme</button>
+    </div>
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGFKO'">→</button>
+    </div>
+  </div>
+	
+	
+  <!-- 第5组按钮：没有文字 -->
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGMUS-INST'">Music, Individual Programme - Bachelor's Programme</button>
+    </div>
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGMUS-INST'">→</button>
+    </div>
+  </div>
+		
+	
+  <!-- 第6组按钮：没有文字 -->
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-MGBIM'">Biomedicine - Bachelor's Programme</button>
+    </div>
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-MGBIM'">→</button>
+    </div>
+  </div>
+	
+	
+  <!-- 第7组按钮：没有文字 -->
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-ENMA'">Sciences, Mathematics</button>
+    </div>
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-ENMA'">→</button>
+    </div>
+  </div>
+
+	
+  <!-- 第8组按钮：没有文字 -->
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-INES'">Sciences, Physical Geography and Ecosystem Science</button>
+    </div>
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-INES'">→</button>
+    </div>
+  </div>
+	
+	
+  <!-- 第9组按钮：没有文字 -->
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGMUS-FOVÄ'">Music, Folk- and World Music - Bachelor's Programme</button>
+    </div>
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGMUS-FOVÄ'">→</button>
+    </div>
+  </div>
+	
+	
+	
+  <!-- 第10组按钮：没有文字 -->
+  <div class="button-container">
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-SGUTV'">Development Studies - Bachelor of Science Programme</button>
+    </div>
+    <div>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-SGUTV'">→</button>
+    </div>
+  </div>
+																			
+  <!-- 右下角返回按钮 -->
+  <button class="back-button" onclick="window.history.back()">回到上一页</button>
+
+</body>
+</html>
