--- a/TUM.html
+++ b/TUM.html
@@ -73,7 +73,7 @@
       <button onclick="window.location.href='https://www.tum.de/en/studies/degree-programs/detail/management-and-technology-tum-bwl-bachelor-of-science-bsc'">Management and Technology (am Campus Heilbronn)</button>
     </div>
     <div>
-      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-ENFYhttps://www.daad.de/en/studying-in-germany/requirements/gce/'">→</button>
+      <button onclick="window.location.href='https://www.daad.de/en/studying-in-germany/requirements/gce/'">→</button>
     </div>
   </div>
   <!-- 第三组按钮：没有文字 -->
