--- a/Amsterdam.html
+++ b/Amsterdam.html
@@ -29,6 +29,7 @@
     }
     .button-container {
       text-align: center;
+      align-items: flex-start;
       display: flex;
       justify-content: space-around;  /* 确保按钮水平排列 */
       gap: 30px;  /* 设置按钮之间的间距 */
