--- a/Amsterdam.html
+++ b/Amsterdam.html
@@ -11,7 +11,7 @@
   color: #333;
   display: flex;
   flex-direction: column;
-  align-items: flex-start; /* 让内容靠左 */
+  align-items: center;
   padding: 20px; /* 添加一些内边距 */
 }
 
