--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <div class="button-container">
     <p>法国</p>
-    <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/'">法国</button>
+    <button onclick="window.location.href='https://tianzhuzhuzhu.github.io/Europe/France'">法国</button>
   </div>
 
 
