--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #CB4154;
+      background-color: #f4f4f4;
       color: #333;
       margin: 0;
       padding: 20px;
