--- a/Uppsala.html
+++ b/Uppsala.html
@@ -59,7 +59,7 @@
     <!-- 第一组按钮：项目主页和申请要求 -->
     <div>
       <p>项目主页</p>
-      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-egyptology'">Bachelor's Programme in Egyptology, 180 credits (HEG1K)</button>
+      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-egyptology'">埃及学</button>
     </div>
     <div>
       <p>申请要求</p>
@@ -70,7 +70,7 @@
   <!-- 第二组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-energy-transition-sustainability-and-leadership'">Bachelor's Programme in Energy Transition – Sustainability and Leadership, 180 credits (TEO1K)</button>
+      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-energy-transition-sustainability-and-leadership'">能源转型-可持续性和领导力</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uu.se/en/study/bachelors-studies/application/entry-requirements'">→</button>
@@ -79,7 +79,7 @@
   <!-- 第三组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-game-design-and-graphics'">Bachelor's Programme in Game Design and Graphics, 180 credits (HSG1K)</button>
+      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-game-design-and-graphics'">游戏设计与图形</button>
     </div> 
     <div>
       <button onclick="window.location.href='https://www.uu.se/en/study/bachelors-studies/application/entry-requirements'">→</button>
@@ -90,7 +90,7 @@
   <!-- 第四组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-game-design-and-programming'">Bachelor's Programme in Game Design and Programming, 180 credits (HSP1K)</button>
+      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-game-design-and-programming'">游戏设计与编程</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uu.se/en/study/bachelors-studies/application/entry-requirements'">→</button>
@@ -101,7 +101,7 @@
   <!-- 第5组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-game-design-and-project-management'">Bachelor's Programme in Game Design and Project Management, 180 credits (HSL1K)</button>
+      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-game-design-and-project-management'">游戏设计与项目管理</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uu.se/en/study/bachelors-studies/application/entry-requirements'">→</button>
@@ -112,7 +112,7 @@
   <!-- 第6组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-leadership-quality-management-improvement'">Bachelor's Programme in Leadership – Quality Management – Improvement, 180 credits (TKV1K)</button>
+      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-leadership-quality-management-improvement'">领导力 - 质量管理 - 改进</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uu.se/en/study/bachelors-studies/application/entry-requirements'">→</button>
@@ -123,7 +123,7 @@
   <!-- 第7组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-sustainable-development-industrial-engineering'">Bachelor's Programme in Sustainable Development in Industrial Engineering, 180 credits (THU1Y)</button>
+      <button onclick="window.location.href='https://www.uu.se/en/study/programme/bachelors-programme-sustainable-development-industrial-engineering'">工业工程可持续发展</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uu.se/en/study/bachelors-studies/application/entry-requirements'">→</button>
