--- a/TUM.html
+++ b/TUM.html
@@ -59,7 +59,7 @@
     <!-- 第一组按钮：项目主页和申请要求 -->
     <div>
       <p>项目主页</p>
-      <button onclick="window.location.href='https://www.tum.de/en/studies/degree-programs/detail/management-and-data-science'">Management and Data Science</button>
+      <button onclick="window.location.href='https://www.tum.de/en/studies/degree-programs/detail/management-and-data-science'">管理与数据科学</button>
     </div>
     <div>
       <p>申请要求</p>
@@ -70,7 +70,7 @@
   <!-- 第二组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.tum.de/en/studies/degree-programs/detail/management-and-technology-tum-bwl-bachelor-of-science-bsc'">Management and Technology (am Campus Heilbronn)</button>
+      <button onclick="window.location.href='https://www.tum.de/en/studies/degree-programs/detail/management-and-technology-tum-bwl-bachelor-of-science-bsc'">管理与技术</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.daad.de/en/studying-in-germany/requirements/gce/'">→</button>
@@ -79,7 +79,7 @@
   <!-- 第三组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.tum.de/en/studies/degree-programs/detail/sustainable-management-and-technology-bachelor-of-science-bsc'">Sustainable Management and Technology</button>
+      <button onclick="window.location.href='https://www.tum.de/en/studies/degree-programs/detail/sustainable-management-and-technology-bachelor-of-science-bsc'">可持续管理与技术</button>
     </div> 
     <div>
       <button onclick="window.location.href='https://www.daad.de/en/studying-in-germany/requirements/gce/'">→</button>
