--- a/Londe.html
+++ b/Londe.html
@@ -70,7 +70,7 @@
     <!-- 第一组按钮：项目主页和申请要求 -->
     <div>
       <p>项目主页</p>
-      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-EGESO'">Economy and Society - Bachelor's Programme</button>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-EGESO'">经济与社会</button>
     </div>
     <div>
       <p>申请要求</p>
@@ -81,7 +81,7 @@
   <!-- 第二组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-ENFY'">Sciences, Physics</button>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-ENFY'">科学、物理</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-ENFY'">→</button>
@@ -90,7 +90,7 @@
   <!-- 第三组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-EGIBU'">International Business - Bachelor's Programme</button>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-EGIBU'">国际商务</button>
     </div> 
     <div>
       <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-EGIBU'">→</button>
@@ -101,7 +101,7 @@
   <!-- 第四组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGFKO'">Fine Arts - Bachelor's Programme</button>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGFKO'">美术</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGFKO'">→</button>
@@ -112,7 +112,7 @@
   <!-- 第5组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGMUS-INST'">Music, Individual Programme - Bachelor's Programme</button>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGMUS-INST'">音乐</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGMUS-INST'">→</button>
@@ -123,7 +123,7 @@
   <!-- 第6组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-MGBIM'">Biomedicine - Bachelor's Programme</button>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-MGBIM'">生物医学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-MGBIM'">→</button>
@@ -134,7 +134,7 @@
   <!-- 第7组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-ENMA'">Sciences, Mathematics</button>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-ENMA'">科学、数学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-ENMA'">→</button>
@@ -145,7 +145,7 @@
   <!-- 第8组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-INES'">Sciences, Physical Geography and Ecosystem Science</button>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-INES'">科学、自然地理和生态系统科学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-NGNAT-INES'">→</button>
@@ -156,7 +156,7 @@
   <!-- 第9组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGMUS-FOVÄ'">Music, Folk- and World Music - Bachelor's Programme</button>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGMUS-FOVÄ'">音乐、民俗和世界音乐</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-KGMUS-FOVÄ'">→</button>
@@ -168,7 +168,7 @@
   <!-- 第10组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-SGUTV'">Development Studies - Bachelor of Science Programme</button>
+      <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-SGUTV'">发展研究</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.lunduniversity.lu.se/lubas/i-uoh-lu-SGUTV'">→</button>
