--- a/Leuven.html
+++ b/Leuven.html
@@ -59,7 +59,7 @@
     <!-- 第一组按钮：项目主页和申请要求 -->
     <div>
       <p>项目主页</p>
-      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-theology-religious-studies'">Bachelor of Theology and Religious Studies (Leuven)</button>
+      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-theology-religious-studies'">神学与宗教研究</button>
     </div>
     <div>
       <p>申请要求</p>
@@ -70,7 +70,7 @@
   <!-- 第二组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-business-administration'">Bachelor of Business Administration (Brussels)</button>
+      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-business-administration'">工商管理</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.kuleuven.be/english/apply/requested-documents/eligibility-bachelor'">→</button>
@@ -79,7 +79,7 @@
   <!-- 第三组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-engineering-technology'">Bachelor of Engineering Technology (Leuven)</button>
+      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-engineering-technology'">工程技术</button>
     </div> 
     <div>
       <button onclick="window.location.href='https://www.kuleuven.be/english/apply/requested-documents/eligibility-bachelor'">→</button>
@@ -90,7 +90,7 @@
   <!-- 第四组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-philosophy'">Bachelor of Philosophy (Leuven)</button>
+      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-philosophy'">哲学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.kuleuven.be/english/apply/requested-documents/eligibility-bachelor'">→</button>
@@ -101,7 +101,7 @@
   <!-- 第5组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-business-engineering'">Bachelor of Business Engineering (Brussels et al)</button>
+      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-business-engineering'">商业工程</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.kuleuven.be/english/apply/requested-documents/eligibility-bachelor'">→</button>
@@ -112,7 +112,7 @@
   <!-- 第6组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-european-studies'">Bachelor of European Studies (Leuven et al)</button>
+      <button onclick="window.location.href='https://www.kuleuven.be/programmes/bachelor-european-studies'">欧洲研究</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.kuleuven.be/english/apply/requested-documents/eligibility-bachelor'">→</button>
