--- a/KTH.html
+++ b/KTH.html
@@ -59,7 +59,7 @@
     <!-- 第一组按钮：项目主页和申请要求 -->
     <div>
       <p>项目主页</p>
-      <button onclick="window.location.href='https://www.kth.se/en/studies/bachelor/information-communication-technology/bsc-information-and-communication-technology-1.437049'">Information and Communication Technology</button>
+      <button onclick="window.location.href='https://www.kth.se/en/studies/bachelor/information-communication-technology/bsc-information-and-communication-technology-1.437049'">信息和通信技术</button>
     </div>
     <div>
       <p>申请要求</p>
