--- a/FreeBerlin.html
+++ b/FreeBerlin.html
@@ -59,7 +59,7 @@
     <!-- 第一组按钮：项目主页和申请要求 -->
     <div>
       <p>项目主页</p>
-      <button onclick="window.location.href='https://www.fu-berlin.de/en/studium/studienangebot/grundstaendige/nordamerikastudien_mono/index.html'">North American Studies</button>
+      <button onclick="window.location.href='https://www.fu-berlin.de/en/studium/studienangebot/grundstaendige/nordamerikastudien_mono/index.html'">北美研究</button>
     </div>
     <div>
       <p>申请要求</p>
