--- a/France.html
+++ b/France.html
@@ -59,7 +59,7 @@
     <!-- 第一组按钮：项目主页和申请要求 -->
     <div>
       <p>巴黎文理研究大学</p>
-      <button onclick="window.location.href='https://psl.eu/en/education/international-bachelor-science-ai'">International Bachelor of Science in AI</button>
+      <button onclick="window.location.href='https://psl.eu/en/education/international-bachelor-science-ai'">人工智能</button>
     </div>
     <div>
       <p>申请要求</p>
@@ -70,7 +70,7 @@
     <!-- 第2组按钮：项目主页和申请要求 -->
     <div>
       <p>巴黎理工学院</p>
-      <button onclick="window.location.href='https://programmes.polytechnique.edu/en/bachelor/about-the-bachelor/bachelor-of-science'">Bachelor of Science</button>
+      <button onclick="window.location.href='https://programmes.polytechnique.edu/en/bachelor/about-the-bachelor/bachelor-of-science'">理学学士</button>
     </div>
     <div>
       <p>申请要求</p>
