--- a/Delft.html
+++ b/Delft.html
@@ -59,7 +59,7 @@
     <!-- 第一组按钮：项目主页和申请要求 -->
     <div>
       <p>项目主页</p>
-      <button onclick="window.location.href='https://www.tudelft.nl/en/onderwijs/opleidingen/bachelors/computer-science-and-engineering/bachelor-of-computer-science-and-engineering'">Computer Science and Engineering</button>
+      <button onclick="window.location.href='https://www.tudelft.nl/en/onderwijs/opleidingen/bachelors/computer-science-and-engineering/bachelor-of-computer-science-and-engineering'">计算机科学与工程</button>
     </div>
     <div>
       <p>申请要求</p>
@@ -70,7 +70,7 @@
   <!-- 第二组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.tudelft.nl/en/onderwijs/opleidingen/bachelors/ect/bsc-earth-climate-and-technology'">Earth, Climate and Technology</button>
+      <button onclick="window.location.href='https://www.tudelft.nl/en/onderwijs/opleidingen/bachelors/ect/bsc-earth-climate-and-technology'">地球、气候与技术</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.tudelft.nl/en/education/admission-and-application/bsc-international-diploma/admission-requirements/diploma-with-additional-requirements#c106232'">→</button>
@@ -79,7 +79,7 @@
   <!-- 第三组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.tudelft.nl/en/education/programmes/bachelors/nb/bsc-nanobiology'">Nanobiology</button>
+      <button onclick="window.location.href='https://www.tudelft.nl/en/education/programmes/bachelors/nb/bsc-nanobiology'">纳米生物学</button>
     </div> 
     <div>
       <button onclick="window.location.href='https://www.tudelft.nl/en/education/admission-and-application/bsc-international-diploma/admission-requirements/diploma-with-additional-requirements#c106233'">→</button>
@@ -90,7 +90,7 @@
   <!-- 第四组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.tudelft.nl/en/onderwijs/opleidingen/bachelors/ae/bsc-aerospace-engineering'">Aerospace Engineering</button>
+      <button onclick="window.location.href='https://www.tudelft.nl/en/onderwijs/opleidingen/bachelors/ae/bsc-aerospace-engineering'">航空航天工程</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.tudelft.nl/en/education/admission-and-application/bsc-international-diploma/admission-requirements/diploma-with-additional-requirements#c106230'">→</button>
